# tinymoon

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  go.mod  index.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  tinymoon.go  tinymoon_conformance_test.go  tinymoon_test.go  vitest.config.js
.github/workflows/: ci-go.yml  ci-npm.yml  ci-pypi.yml  publish.yml
.rlsbl/: config.json  managed-files.json
.rlsbl/bases/: .gitignore
.rlsbl/changes/: 0.0.1.md  0.1.0.jsonl  0.1.0.md  0.2.0.jsonl  0.2.0.md  0.3.0.jsonl  0.3.0.md  0.3.1.md  0.4.0.md  0.5.0.md  0.6.0.jsonl  0.6.0.md  0.6.1.md  0.7.0.md  0.8.0.md  0.9.0.jsonl  0.9.0.md  0.9.1.jsonl  0.9.1.md  unreleased.jsonl
.rlsbl/releases/: unreleased.toml  v0.0.1.toml  v0.1.0.toml  v0.3.0.toml  v0.3.1.toml  v0.5.0.toml  v0.7.0.toml  v0.8.0.toml  v0.9.1.toml
.strictcli/: schema.json
assets/: tokens.json
assets/conformance/: expectations.json  rules.json
assets/css/: base.css  primitives.css  shell.css  tokens.css  widgets.css
assets/js/: accordion.js  auditor.js  badge.js  breadcrumbs.js  chart.js  chrome.d.ts  chrome.js  combobox.js  controls.js  ctxmenu.js  datepicker.js  dismiss.js  dom.js  drawer.js  embed.js  extras.d.ts  extras.js  feed.js  filterbar.js  format.js  grid.js  hovercard.js  iconbutton.js  icons.js  index.d.ts  index.js  inputs.js  kernel.js  lazy.js  markdown.js  modal.js  net.js  paginate.js  palette.js  popover.js  realtime.js  select.js  settings.js  shell.js  shortcuts.js  (+18 more)
gallery/: embed-demo.html  gallery.css  gallery.js  index.html
scripts/: check-js-syntax.sh  checkpoint.sh  gen_conformance_json.py  gen_tokens_json.py
tests/: test_assets.py  test_budgets.py  test_charter.py  test_checker.py  test_conformance_artifact.py  test_contrast.py  test_placeholder.py  test_theme_boot_snippet.py  test_tokens_artifact.py  test_version.py
tests/fixtures/clean/: clean.css  clean.html  clean.js  embed-boundary.html  tinymoon-allowlist.txt  title-bracket.js
tests/fixtures/violations/: border-radius.css  border-radius.html  external-url-template.js  external-url-ws.js  external-url.css  external-url.html  external-url.js  native-control-js-types.js  native-control.js  native-input-types.html  raw-color-extra-fns.css  raw-color.css  raw-color.html  title-attr.js
tests/js/e2e/: chrome-6b.spec.js  chrome.spec.js  conformance-csp.spec.js  conformance-runtime.spec.js  content-first.spec.js  copy.spec.js  ctxmenu.spec.js  data-widgets-5b.spec.js  data-widgets.spec.js  datepicker.spec.js  embed-isolation.spec.js  forms.spec.js  gallery-characterization.spec.js  gallery.spec.js  helpers.js  light-dismiss.spec.js  modal.spec.js  red-bugs.spec.js  (+10 more)
tests/types/: consumer.ts  tsconfig.json
tinymoon/: __init__.py  checker.py  cli.py
todo/: v0.4.0-loose-ends.md
todo/.defer/: hosted-gallery.md
todo/.done/: number-stepper.md  sidebar-drawer-polish.md  v0.4.0-loose-ends-resolved.md  visual-review.md
(+76 files in other folders)
