[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinymoon"
version = "0.2.0"
description = "Zero-dependency vanilla JS/CSS UI framework (placeholder release)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "smm-h", email = "smmh72@gmail.com" },
]
keywords = ["ui", "framework", "vanilla-js", "css", "zero-dependency", "rlsbl"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

# Own-ecosystem dependency: always unpinned, always latest.
dependencies = [
    "strictcli",
]

[project.scripts]
tinymoon = "tinymoon.cli:main"

[project.urls]
Homepage = "https://github.com/smm-h/tinymoon"
Repository = "https://github.com/smm-h/tinymoon"

[tool.hatch.build.targets.wheel]
packages = ["tinymoon"]

# Ship the framework assets inside the wheel.
[tool.hatch.build.targets.wheel.force-include]
"assets" = "tinymoon/assets"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
