[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinymoon"
version = "0.4.0"
description = "Zero-dependency vanilla JS/CSS UI framework with a conformance checker CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "smm-h", email = "smmh72@gmail.com" },
]
keywords = ["ui", "framework", "vanilla-js", "css", "zero-dependency", "rlsbl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]

# Own-ecosystem dependency: always unpinned, always latest.
dependencies = [
    "strictcli",
]

[project.scripts]
tinymoon = "tinymoon.cli:main"

[project.urls]
Homepage = "https://github.com/smm-h/tinymoon"
Repository = "https://github.com/smm-h/tinymoon"

[tool.hatch.build.targets.wheel]
packages = ["tinymoon"]

# Ship the framework assets inside the wheel.
[tool.hatch.build.targets.wheel.force-include]
"assets" = "tinymoon/assets"

# Explicit sdist include: keep only the package, assets, tests, and
# essential root files. Excludes .rlsbl/, .github/, CLAUDE.md, etc.
[tool.hatch.build.targets.sdist]
include = [
    "tinymoon/",
    "assets/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
